[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
parking_lot = "0.12"
chrono = "0.4"
serde_json = "1.0"
colored = "2.0"